# f1-telemetry

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml
.github/workflows/: api-image.yaml  producer-image.yaml  socket-image.yaml  spark-image.yaml  web-image.yaml
api/: Cargo.toml  Dockerfile
api/src/: main.rs  sse_message.rs
api/src/aggregation/: rpm_aggregation.rs  speed_aggregation.rs
api_old/: Dockerfile
api_old/src/: main.rs
consumer/: Dockerfile  build.sbt
fixture/: Cargo.toml
fixture/src/: main.rs
infra/: api_deployment.yaml  consumer_app.yaml  ingress.yaml  observability_deployment.yaml  producer_deployment.yaml  web_deployment.yaml
infra/kafka/: topics.yaml
infra/producer/: deployment.yaml
infra/socket/: deployment.yaml
infra/spark/: app.yaml  consumer.yaml  warehouse.yaml
infra/web/: deployment.yaml
otel/: otel-collector-config.yml
producer/: Cargo.toml
producer/src/: main.rs
producer/src/packet/: header.rs
producer/src/packet/payload/: car_setups.rs  lap.rs  mod.rs  motion_ex.rs  session.rs  time_trial.rs  tyre_sets.rs
socket/: Cargo.toml  Dockerfile
socket/src/: main.rs  socket_message.rs
socket/src/aggregation/: mod.rs  rpm_aggregation.rs
spark/: Dockerfile
src/: main.rs
src/packet/: car_status.rs  event.rs  header.rs  lap.rs  lobby_info.rs  mod.rs  participants.rs  time_trial.rs
src/packet/payload/: car_damage.rs  car_setups.rs  car_status.rs  car_telemetry.rs  event.rs  final_classification.rs  lap_positions.rs  lobby_info.rs  mod.rs  motion.rs  motion_ex.rs  participants.rs  session.rs  session_history.rs  tyre_sets.rs
tester/: Cargo.toml
tester/src/: main.rs
web/f1-telemetry/: Dockerfile  README.md  index.html  package-lock.json  package.json
web/f1-telemetry/nginx/: nginx-k8s.conf  nginx-local.conf  nginx.conf
(+18 files in other folders)
