[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
rdkafka = { version = "0.38", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.47", features = ["full"] }
