[package]
name = "producer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.23", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
rdkafka = { version = "0.38", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.47", features = ["full"] }
