[package]
name = "socket"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
log = "0.4"
rdkafka = { version = "0.38", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
tokio-tungstenite = "0.24" # TODO
futures-util = "0.3" # TODO
uuid = { version = "1.0", features = ["v4"] }
